force-app/main/default/objects/delivery__c/delivery__c.object-meta.xml
<CustomObject>
    <label>delivery</label>
    <nameField>
        <displayFormat>d-{0}</displayFormat>
        <label>name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>deliveries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>