force-app/main/default/objects/delivery__c/fields/Client_c__c.field-meta.xml
<CustomField>
    <fullName>Client_c__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client__c</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>deliveries</relationshipLabel>
    <relationshipName>deliveries</relationshipName>
    <type>Lookup</type>
</CustomField>