force-app/main/default/objects/delivery__c/fields/suggested_donation__c.field-meta.xml
<CustomField>
    <fullName>suggested_donation__c</fullName>
    <label>suggested donation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>